# CG-Pirates

./: .gitignore  rules.txt
cpp/: CMakeLists.txt  ai_naive.cpp  ai_naive.h  ai_score.cpp  ai_score.h  ai_search.cpp  ai_search.h  ai_tactics.cpp  ai_tactics.h  assertions.h  commands.cpp  commands.h  cxxtweaks.h  game.cpp  game.h  hex.cpp  hex.h  io.cpp  io.h  log.h  main.cpp  proxies.h  simulation.cpp  simulation.h  submit.py  test_ai_naive.cpp  test_ai_score.cpp  test_ai_search.cpp  test_ai_tactics.cpp  test_hex.cpp  test_simulation.cpp
py/: CG-Pirates.pyproj  CG-Pirates.sln  ai.py  commands.py  game.py  main.py  submit.py
